# ui_composer

./: Cargo.toml  README.md
examples/: components.rs  compos.rs  counter.rs  empty.rs  firstval.rs  fragments.rs  functional.rs  hello.rs  plans-rsx.md  plans.md  splice.rs
src/: lib.rs  main.rs  prelude.rs  program.rs  program_state.rs
src/app/: app_builder.rs  mod.rs
src/logging/: mod.rs
src/program/: mod.rs  program_state.rs
src/renderer/: device.rs  formats.rs  main.wgsl  main_shader.rs  mod.rs  state.rs  text.rs
src/renderer/device/: mod.rs
src/renderer/engine/: mod.rs  render_engine.rs  render_module.rs
src/renderer/formats/: mod.rs  vertex.rs
src/renderer/modules/: main.wgsl  mod.rs  text.rs  ui.rs  ui_primitives.wgsl
src/renderer/state/: content.rs  helpers.rs  mod.rs  render_module.rs
src/renderer/text/: mod.rs
src/shaders/: formats.rs  main.wgsl
src/ui/: docks.rs  elements.rs  geometry.rs  layout.rs  math_types.rs  mod.rs  render.rs  ui_types.rs  utils.rs
src/ui/layout/: algorithm_wdivmin.rs  mod.rs
src/window/: mod.rs
