[package]
name = "overtone_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.28", features = [] }
env_logger = "0.10"
log = "0.4"
wgpu = "0.18"
tokio = { version = "1", features = ["full"] }
bytemuck = { version = "1.12", features = ["derive"] }

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1
opt-level = 's'
