[package]
name = "ui-composer"
version = "0.1.0"
edition = "2021"
rust-version = "1.74.0"
description = "A cross-platform library for creation of native user interfaces/graphics using a tasteful combination of procedural and functional-reactive programming."
readme = "README.md"
license = "MIT"
repository = "https://github.com/mrpedrobraga/ui-composer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-signals = "0.3.33"
winit = { version = "0.28", features = [] }
log = "0.4"
wgpu = "0.18"
tokio = { version = "1", features = ["full"] }
bytemuck = { version = "1.12", features = ["derive"] }
glyphon = { version = "*" }
rand = "0.8.5"

[lib]
crate-type = ["dylib", "rlib"]

[build]
rustflags = ["-C", "prefer-dynamic", "-C", "rpath"]

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1
opt-level = 's'
